@@ -1,4 +1,4 @@
-SCTK Basic Installation for Version 2.3-rc2b
+SCTK Basic Installation for Version 2.3-rc2c
 ============================================
 
 To install compile and install sctk, from the main directory
