@@ -1,3 +1,7 @@
+SCTK Version 2.3-rc2c - Release May 8, 2008
+  [+] Check if the character " is not in a RTTM file.
+  [/] Changed the sclite compilation flags.
+
 SCTK Version 2.3-rc2b - Release May 6, 2008
   [*] Fixed an asclite bug went more than 32768 segment are added to the structure.
   [/] Changed the asclite compilation flags.
